# Internship-Indiesemic

EEPROM_i2c/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
EEPROM_i2c/src/: main.c
GPS_UART/: CMakeLists.txt  nrf52840_gps.overlay  nrf52840dk_nrf52840.overlay  prj.conf
GPS_UART/src/: main.c
GPS_UART/src/isc_config/: GPS_config_io.c  GPS_config_io.h  cmd.c  cmd.h  uart.c  uart.h
I2C/4x4_keypad/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
I2C/OLED_text_print/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
I2C/ads_i2c/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
I2C/i2c_read_OLED_address/: CMakeLists.txt  prj.conf
I2C/scanner/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay  prj.conf  sample.yaml
I2C/ssd1306_indiesemic/: CMakeLists.txt  prj.conf
ISC_SX126x/ESP32/: platformio.ini
ISC_SX126x/Renesas__Boards/: sx126x_hal.c  sx126x_hal.h
LCD1602_ExamDevice/: CMakeLists.txt  isc_nrf52832_a.overlay  nrf52840_gps.overlay  prj.conf
LCD1602_ExamDevice/boards/arm/isc_nrf52832_a/: Kconfig.board  Kconfig.defconfig  isc_nrf52832_a.dts  isc_nrf52832_a.yaml  isc_nrf52832_a_defconfig
LCD1602_ExamDevice/boards/arm/nrf52840_gps/: Kconfig.board  Kconfig.defconfig  nrf52840_gps.dts  nrf52840_gps.yaml  nrf52840_gps_defconfig
LCD1602_ExamDevice/src/: main.c
Payment_Soundbox_using_BLE_Quectelboard_ILI9341/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
TFT_ILI9341_DISPLAY/: CMakeLists.txt  prj.conf
ble_custom_service_tut/: CMakeLists.txt  README.md  prj.conf
echo_bot/: CMakeLists.txt
(+87 files in other folders)
